resource_customizations/projectcontour.io/HTTPProxy/testdata/degraded.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: foo-basic.bar.com
  routes:
    - conditions:
        - prefix: /
      services:
        - name: s1
          port: 80
status:
  conditions:
  - type: Valid
    status: "False"
    observedGeneration: 1
    lastTransitionTime: "2025-04-07T10:00:00Z"
    reason: Invalid
    message: 'unresolved service reference: service "default/s1" not found'
  currentStatus: invalid
  description: 'unresolved service reference: service "default/s1" not found'
  loadBalancer:
    ingress:
    - hostname: abc-123.elb.us-east-1.amazonaws.com
