resource_customizations/projectcontour.io/HTTPProxy/testdata/not_reconciled.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: foo-basic.bar.com
  routes:
    - conditions:
        - prefix: /
      services:
        - name: s1
          port: 80
status:
  currentStatus: NotReconciled
  description: Waiting for controller
