resource_customizations/projectcontour.io/HTTPProxy/testdata/terminating.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: terminating-resource
  deletionTimestamp: "2024-01-01T00:00:00Z"
  finalizers:
    - example.com/finalizer
